--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Video_Player</title>
   </head>
   <body>
-    <h1>TALLER DE HTML CSS JS</h1>
+    <h1>Reproductor de video</h1>
     <div class="wrapper">
       <div class="player">
         <video
